--- a/.github/workflows/bygg_og_deploy.yml
+++ b/.github/workflows/bygg_og_deploy.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
         with:
-          gradle-version: 8.9
+          gradle-version: 8.10+
       - name: Build and test with Gradle
         run: ./gradlew build --stacktrace
 
