--- a/.github/workflows/bygg_og_deploy.yml
+++ b/.github/workflows/bygg_og_deploy.yml
@@ -63,14 +63,29 @@ jobs:
           push: true
           tags: ${{ env.IMAGE }}
 
+#  deployToQ1:
+#    needs: build_and_tag
+#    permissions:
+#      contents: "read"
+#      id-token: "write"
+#    name: 'Deploy NAIS Q1'
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v4
+#      - name: Deploy to Q1
+#        uses: nais/deploy/actions/deploy@v2
+#        env:
+#          "CLUSTER": dev-fss
+#          "RESOURCE": .nais/dev_q1.yaml
+#          "IMAGE": ${{ needs.build_and_tag.outputs.image }}
+
+
 #  deployToQ2:
+#    needs: build_and_tag
 #    permissions:
 #      contents: "read"
 #      id-token: "write"
 #    name: 'Deploy NAIS Q2'
-#    needs: build_and_tag
-#    outputs:
-#      image: ${{ needs.build_and_tag.outputs.image }}
 #    runs-on: ubuntu-latest
 #    steps:
 #      - uses: actions/checkout@v4
@@ -83,11 +98,14 @@ jobs:
 
 
 #  deployToProd:
+#    needs:
+#     - build_and_tag
+#     - deployToQ1
+#     - deployToQ2
 #    permissions:
 #      contents: "read"
 #      id-token: "write"
 #    name: 'Deploy NAIS PROD'
-#    needs: deployToQ2
 #    runs-on: ubuntu-latest
 #    steps:
 #      - uses: actions/checkout@v4
@@ -96,5 +114,5 @@ jobs:
 #        env:
 #          "CLUSTER": prod-fss
 #          "RESOURCE": nais/prod.yaml
-#          "IMAGE": ${{ needs.deployToQ2.outputs.image }}
+#          "IMAGE": ${{ needs.build_and_tag.outputs.image }}
 #
