--- a/.nais/dev_q1.yaml
+++ b/.nais/dev_q1.yaml
@@ -9,11 +9,7 @@ spec:
   azure:
     application:
       enabled: true
-      allowAllUsers: true
-      claims:
-        extra:
-          - "NAVident"
-          - "azp_name"
+      allowAllUsers: false
   accessPolicy:
     inbound:
       rules:
