--- a/.github/workflows/bygg_og_deploy.yml
+++ b/.github/workflows/bygg_og_deploy.yml
@@ -34,14 +34,6 @@ jobs:
       - name: Build and test with Gradle
         run: ./gradlew build --stacktrace
 
-      # LOGGIN TO GHCR
-      - name: Login GHCR
-        uses: docker/login-action@v3.3.0
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
       # SETTER DATO OG COMMIT VARIABEL
       - name: Set date & hash
         run: |
@@ -54,6 +46,14 @@ jobs:
         run: | 
           echo "IMAGE=ghcr.io/${{ github.repository }}/samordning-personoppslag:${{ env.DATE }}---${{ env.COMMIT_HASH }}" >> $GITHUB_ENV
           echo "IMAGE=ghcr.io/${{ github.repository }}/samordning-personoppslag:${{ env.DATE }}---${{ env.COMMIT_HASH }}" >> $GITHUB_OUTPUT
+
+      # LOGGIN TO GHCR
+      - name: Login GHCR
+        uses: docker/login-action@v3.3.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       # PUBLISH DOCKER IMAGE
       - name: Build and push docker image
@@ -80,21 +80,21 @@ jobs:
 #          "IMAGE": ${{ needs.build_and_tag.outputs.image }}
 
 
-#  deployToQ2:
-#    needs: build_and_tag
-#    permissions:
-#      contents: "read"
-#      id-token: "write"
-#    name: 'Deploy NAIS Q2'
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@v4
-#      - name: Deploy to Q2
-#        uses: nais/deploy/actions/deploy@v2
-#        env:
-#          "CLUSTER": dev-fss
-#          "RESOURCE": .nais/dev_q2.yaml
-#          "IMAGE": ${{ needs.build_and_tag.outputs.image }}
+  deployToQ2:
+    needs: build_and_tag
+    permissions:
+      contents: "read"
+      id-token: "write"
+    name: 'Deploy NAIS Q2'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Deploy to Q2
+        uses: nais/deploy/actions/deploy@v2
+        env:
+          "CLUSTER": dev-fss
+          "RESOURCE": .nais/dev_q2.yaml
+          "IMAGE": ${{ needs.build_and_tag.outputs.image }}
 
 
 #  deployToProd:
