--- a/.nais/dev_q2.yaml
+++ b/.nais/dev_q2.yaml
@@ -49,7 +49,7 @@ spec:
       memory: 1Gi
     requests:
       cpu: 200m
-      memory: 500m
+      memory: 500M
   vault:
     enabled: false
   webproxy: false
