--- a/.nais/dev_q2.yaml
+++ b/.nais/dev_q2.yaml
@@ -41,7 +41,7 @@ spec:
     periodSeconds: 5
   replicas:
     min: 2
-    max: 2
+    max: 2w
     cpuThresholdPercentage: 80
   resources:
     limits:
@@ -49,7 +49,7 @@ spec:
       memory: 1Gi
     requests:
       cpu: 200m
-      memory: 500M
+      memory: 500Mi
   vault:
     enabled: false
   webproxy: false
