--- a/.nais/dev_q2.yaml
+++ b/.nais/dev_q2.yaml
@@ -41,7 +41,7 @@ spec:
     periodSeconds: 5
   replicas:
     min: 2
-    max: 2w
+    max: 2
     cpuThresholdPercentage: 80
   resources:
     limits:
