fiks proxy app bug

--- a/.nais/dev_q2.yaml
+++ b/.nais/dev_q2.yaml
@@ -52,7 +52,7 @@ spec:
       memory: 500Mi
   vault:
     enabled: false
-  webproxy: false
+  webproxy: true
   env:
     - name: SPRING_PROFILES_ACTIVE
       value: dev
