--- a/.nais/dev_q2.yaml
+++ b/.nais/dev_q2.yaml
@@ -71,6 +71,10 @@ spec:
       value: https://pdl-api.intern.dev.nav.no/graphql
     - name: PDL_SCOPE
       value: api://dev-fss.pdl.pdl-api/.default
+    - name: KODEVERK_URL
+      value: https://kodeverk-api.intern.nav.no
+    - name: KODEVERK_SCOPE
+      value: api//dev-gcp.felleskodeverk-api/.default
   observability:
     autoInstrumentation:
       enabled: true
