PES-561, PES-569: Legge til søtte for SAM-Q5, noe småfiks i PersonSamordningService.

--- a/.nais/dev_q1.yaml
+++ b/.nais/dev_q1.yaml
@@ -21,6 +21,14 @@ spec:
           namespace: pensjon-batch
           cluster: dev-fss
 
+        - application: sam-q5
+          namespace: pensjonsamhandling
+          cluster: dev-fss
+
+        - application: sambatch-q5
+          namespace: pensjon-batch
+          cluster: dev-fss
+
         - application: azure-token-generator
           namespace: aura
           cluster: dev-gcp
