PES-561 småfiks her og der. refaktorering.

--- a/.nais/dev_q1.yaml
+++ b/.nais/dev_q1.yaml
@@ -9,7 +9,7 @@ spec:
   azure:
     application:
       enabled: true
-      allowAllUsers: true
+#      allowAllUsers: true
   accessPolicy:
     inbound:
       rules:
