--- a/.nais/dev_q2.yaml
+++ b/.nais/dev_q2.yaml
@@ -9,7 +9,7 @@ spec:
   azure:
     application:
       enabled: true
-      allowAllUsers: true
+#      allowAllUsers: true
   accessPolicy:
     inbound:
       rules:
