PES-561 prøve med uthenting av m2m-token ved bruk av texas.
Co-authored-by: Pål Fleischer Børjeson <paalfb@yahoo.se>
Co-authored-by: Mathias Sand Jahren <the.mather1@gmail.com>

--- a/.nais/dev_q1.yaml
+++ b/.nais/dev_q1.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: pensjonsamhandling
   labels:
     team: pensjonsamhandling
+  annotations:
+    texas.nais.io/enabled: "true"
 spec:
   azure:
     application:
