--- a/.nais/dev_q2.yaml
+++ b/.nais/dev_q2.yaml
@@ -5,6 +5,8 @@ metadata:
   namespace: pensjonsamhandling
   labels:
     team: pensjonsamhandling
+  annotations:
+    texas.nais.io/enabled: "true"
 spec:
   azure:
     application:
