PES-561: Fiks feil i prod.yaml
Co-authored-by: Jens Chr. Madsen <Jens.Christian.Madsen@nav.no>
Co-authored-by: Mathias Sand Jahren <the.mather1@gmail.com>

--- a/.github/workflows/bygg_og_deploy.yml
+++ b/.github/workflows/bygg_og_deploy.yml
@@ -113,6 +113,6 @@ jobs:
         uses: nais/deploy/actions/deploy@v2
         env:
           "CLUSTER": prod-fss
-          "RESOURCE": nais/prod.yaml
+          "RESOURCE": .nais/prod.yaml
           "IMAGE": ${{ needs.build_and_tag.outputs.image }}
 
