--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -71,7 +71,7 @@ spec:
     - name: KODEVERK_URL
       value: https://kodeverk-api.intern.nav.no
     - name: KODEVERK_SCOPE
-      value: api//prod-gcp.felleskodeverk-api/.default
+      value: api://prod-gcp.team-rocket.kodeverk-api/.default
   observability:
     autoInstrumentation:
       enabled: true
