PES-604: Få listener til å kompilere.

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -3,6 +3,10 @@ NAIS_APP_NAME: personoppslag
 KODEVERK_URL: http://localhost/kodeverk
 PDL_URL: http://localhost/graphql
 
+pdl:
+  kafka:
+    autoStartup: false
+
 no.nav.security.jwt:
   issuer:
     entraid:
