PES-604, PES-606: Få pdl-listener, klient og service klasser til SAM på plass
Co-authored-by: Morten Normann <morten.normann@nav.no>

--- a/.nais/dev_q1.yaml
+++ b/.nais/dev_q1.yaml
@@ -86,6 +86,10 @@ spec:
       value: https://kodeverk-api.intern.nav.no
     - name: KODEVERK_SCOPE
       value: api://dev-gcp.team-rocket.kodeverk-api/.default
+    - name: SAM_SCOPE
+      value: api://dev-fss.pensjonsamhandling.sam-q1/.default
+    - name: SAM_URL
+      value: https://sam-q1.intern.dev.nav.no
   observability:
     autoInstrumentation:
       enabled: true
