--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -2,6 +2,7 @@
 NAIS_APP_NAME: personoppslag
 KODEVERK_URL: http://localhost/kodeverk
 PDL_URL: http://localhost/graphql
+SAM_URL: http//localhost/api/oppdaterpersonalia
 
 pdl:
   kafka:
