--- a/.nais/dev_q2.yaml
+++ b/.nais/dev_q2.yaml
@@ -79,6 +79,10 @@ spec:
       value: https://kodeverk-api.intern.nav.no
     - name: KODEVERK_SCOPE
       value: api://dev-gcp.team-rocket.kodeverk-api/.default
+    - name: SAM_SCOPE
+      value: api://dev-fss.pensjonsamhandling.sam-q2/.default
+    - name: SAM_URL
+      value: https://sam-q2.intern.dev.nav.no
   observability:
     autoInstrumentation:
       enabled: true
