--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -74,6 +74,10 @@ spec:
       value: https://kodeverk-api.intern.nav.no
     - name: KODEVERK_SCOPE
       value: api://prod-gcp.team-rocket.kodeverk-api/.default
+    - name: SAM_SCOPE
+      value: api://prod-fss.pensjonsamhandling.sam/.default
+    - name: SAM_URL
+      value: https://sam.intern.nav.no
   observability:
     autoInstrumentation:
       enabled: true
