--- a/.github/workflows/bygg_og_deploy_sandbox.yml
+++ b/.github/workflows/bygg_og_deploy_sandbox.yml
@@ -34,35 +34,46 @@ jobs:
       - name: Build and test with Gradle
         run: ./gradlew build --stacktrace
 
-      # SETTER DATO OG COMMIT VARIABEL
-      - name: Set date & hash
-        run: |
-          export TZ=CET
-          echo "DATE=$(date "+%Y-%m-%d--%H-%M-%S")" >> $GITHUB_ENV
-          echo "COMMIT_HASH=$(git rev-parse HEAD)-sandbox" >> $GITHUB_ENV
-      # SETTER IMAGE VARIABEL
-      - name: Set Image
-        id: setimage
-        run: | 
-          echo "IMAGE=ghcr.io/${{ github.repository }}/samordning-personoppslag:${{ env.DATE }}---${{ env.COMMIT_HASH }}" >> $GITHUB_ENV
-          echo "IMAGE=ghcr.io/${{ github.repository }}/samordning-personoppslag:${{ env.DATE }}---${{ env.COMMIT_HASH }}" >> $GITHUB_OUTPUT
+#      # SETTER DATO OG COMMIT VARIABEL
+#      - name: Set date & hash
+#        run: |
+#          export TZ=CET
+#          echo "DATE=$(date "+%Y-%m-%d--%H-%M-%S")" >> $GITHUB_ENV
+#          echo "COMMIT_HASH=$(git rev-parse HEAD)-sandbox" >> $GITHUB_ENV
+#      # SETTER IMAGE VARIABEL
+#      - name: Set Image
+#        id: setimage
+#        run: |
+#          echo "IMAGE=ghcr.io/${{ github.repository }}/samordning-personoppslag:${{ env.DATE }}---${{ env.COMMIT_HASH }}" >> $GITHUB_ENV
+#          echo "IMAGE=ghcr.io/${{ github.repository }}/samordning-personoppslag:${{ env.DATE }}---${{ env.COMMIT_HASH }}" >> $GITHUB_OUTPUT
+#
+#      # LOGGIN TO GHCR
+#      - name: Login GHCR
+#        uses: docker/login-action@v3.3.0
+#        with:
+#          registry: ghcr.io
+#          username: ${{ github.repository_owner }}
+#          password: ${{ secrets.GITHUB_TOKEN }}
+#
+#      # PUBLISH DOCKER IMAGE
+#      - name: Build and push docker image
+#        uses: docker/build-push-action@v6
+#        with:
+#          context: .
+#          push: true
+#          tags: ${{ env.IMAGE }}
 
-      # LOGGIN TO GHCR
-      - name: Login GHCR
-        uses: docker/login-action@v3.3.0
+      - name: Nais docker-build
+        uses: nais/docker-build-push@v0
+        id: docker-push
         with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          team: pensjonsamhandling
+          tag: ${{ github.event.repository.name }}
+          image_suffix: '--sandbox'
+          pull: true
 
-      # PUBLISH DOCKER IMAGE
-      - name: Build and push docker image
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          push: true
-          tags: ${{ env.IMAGE }}
-
+      - name: 'Deploy image'
+        run: echo "IMAGE=${{ needs.build_and_tag.outputs.image }}"
 
   deployToQ2:
     needs: build_and_tag
