Oppdatert docker image reop fra ghcr.io til Google Artifact Repository (GAR)

--- a/.github/workflows/bygg_og_deploy_sandbox.yml
+++ b/.github/workflows/bygg_og_deploy_sandbox.yml
@@ -15,7 +15,7 @@ jobs:
       id-token: write
       checks: write
     outputs:
-      image: ${{ steps.setimage.outputs.IMAGE }}
+      image: ${{ steps.docker-push.outputs.image }}
     steps:
       # PULL REPO
       - name: Pull repo
