PES-605: åpner opp for securelogg
Co-authored-by: Morten Normann <morten.normann@nav.no>

--- a/.nais/dev_q2.yaml
+++ b/.nais/dev_q2.yaml
@@ -33,7 +33,7 @@ spec:
   ingresses:
     - https://samordning-personoppslag-q2.dev.intern.nav.no
   secureLogs:
-    enabled: false
+    enabled: true
   prometheus:
     enabled: true
     path: actuator/prometheus
