--- a/.nais/dev_q1.yaml
+++ b/.nais/dev_q1.yaml
@@ -40,7 +40,7 @@ spec:
   ingresses:
     - https://samordning-personoppslag-q1.dev.intern.nav.no
   secureLogs:
-    enabled: false
+    enabled: true
   prometheus:
     enabled: true
     path: actuator/prometheus
