--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -28,7 +28,7 @@ spec:
   ingresses:
     - https://samordning-personoppslag.intern.nav.no
   secureLogs:
-    enabled: false
+    enabled: true
   prometheus:
     enabled: true
     path: actuator/prometheus
