Endrer namespace til nais fra aura for token-generator
Co-authored-by: Morten Normann <morten.normann@nav.no>

--- a/.nais/dev_q1.yaml
+++ b/.nais/dev_q1.yaml
@@ -32,7 +32,7 @@ spec:
           cluster: dev-fss
 
         - application: azure-token-generator
-          namespace: aura
+          namespace: nais
           cluster: dev-gcp
 
   image: {{ image }}
