--- a/.nais/dev_q2.yaml
+++ b/.nais/dev_q2.yaml
@@ -24,7 +24,7 @@ spec:
           cluster: dev-fss
 
         - application: azure-token-generator
-          namespace: aura
+          namespace: nais
           cluster: dev-gcp
 
 
