--- a/.nais/dev_q1.yaml
+++ b/.nais/dev_q1.yaml
@@ -98,3 +98,6 @@ spec:
       destinations:
         - id: grafana-lgtm
         - id: elastic-apm
+    logging:
+      destinations:
+        - id: loki
