--- a/.nais/dev_q2.yaml
+++ b/.nais/dev_q2.yaml
@@ -91,3 +91,6 @@ spec:
       destinations:
         - id: grafana-lgtm
         - id: elastic-apm
+    logging:
+      destinations:
+        - id: loki
