--- a/.nais/prod.yaml
+++ b/.nais/prod.yaml
@@ -86,3 +86,6 @@ spec:
       destinations:
         - id: grafana-lgtm
         - id: elastic-apm
+    logging:
+      destinations:
+        - id: loki
