--- a/.github/workflows/bygg_og_deploy.yml
+++ b/.github/workflows/bygg_og_deploy.yml
@@ -1,12 +1,22 @@
-name: Bygg og deploy
+name: Build and Deploy Main
 
 on:
+  workflow_run:
+    workflows: ["Auto-merge Dependabot Patch Updates"]
+    types:
+      - completed
+  workflow_dispatch:
   push:
     branches:
       - main
 
 jobs:
   build_and_tag:
+    if: ${{ (github.event_name == 'workflow_run' &&
+      github.event.workflow_run.conclusion == 'success' &&
+      github.event.workflow_run.actor.login == 'dependabot[bot]') ||
+      github.event.workflow_run.actor.login == 'push' ||
+      github.event_name == 'workflow_dispatch' }}
     name: 'Build and tag'
     runs-on: ubuntu-latest
     permissions:
