--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -45,9 +45,15 @@ jobs:
             echo "patch_update=false" >> $GITHUB_OUTPUT
           fi
 
-      - name: Enable auto-merge
-        if: steps.check.outputs.patch_update == 'true' && steps.label_check.outputs.has_dependencies_label == 'true'
-        run: gh pr merge "$PR_URL" --auto --merge
+      - name: Debug PR Info
+        run: gh pr view "$PR_NUMBER" --json state,number,title,author,mergeable
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PR_URL: ${{ github.event.pull_request.html_url }}
+          PR_NUMBER: ${{ github.event.pull_request.number }}
+
+      - name: Enable auto-merge
+        if: steps.check.outputs.patch_update == 'true' && steps.label_check.outputs.has_dependencies_label == 'true'
+        run: gh pr merge "$PR_NUMBER" --auto --merge
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          PR_NUMBER: ${{ github.event.pull_request.number }}
