Refactoring. PR_NUMBER. Echo output.
Co-authored-by: Jens Chr. Madsen <Jens.Christian.Madsen@nav.no>

--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -38,12 +38,16 @@ jobs:
             to_major=${BASH_REMATCH[4]}
             to_minor=${BASH_REMATCH[5]}
             to_patch=${BASH_REMATCH[6]}
+            echo "Parsed version bump:"
+            echo "  From: $from_major.$from_minor.$from_patch"
+            echo "  To:   $to_major.$to_minor.$to_patch"
             if [[ "$from_major" == "$to_major" && "$from_minor" == "$to_minor" && "$from_patch" != "$to_patch" ]]; then
               echo "patch_update=true" >> $GITHUB_OUTPUT
             else
               echo "patch_update=false" >> $GITHUB_OUTPUT
             fi
           else
+            echo "No match for patch update regex"
             echo "patch_update=false" >> $GITHUB_OUTPUT
           fi
 
@@ -52,7 +56,8 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PR_URL: ${{ github.event.pull_request.html_url }}
-        run: gh pr merge "$PR_URL" --auto --merge
+          PR_NUMBER: ${{ github.event.pull_request.number }}
+        run: gh pr merge "$PR_NUMBER" --auto --merge
 
       - name: Failed auto-merge
         if: steps.check.outputs.patch_update == 'false' || steps.label_check.outputs.has_dependencies_label == 'false'
