--- a/.github/workflows/bygg_og_deploy.yml
+++ b/.github/workflows/bygg_og_deploy.yml
@@ -11,7 +11,11 @@ on:
 
 jobs:
   build_and_tag:
-    if: ${{ github.event_name == 'push' || (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.actor.login == 'dependabot[bot]')}}
+    if: >
+      (github.event_name == 'workflow_run' &&
+      github.event.workflow_run.conclusion == 'success' &&
+      github.event.workflow_run.actor.login == 'dependabot[bot]') ||
+      (github.event_name == 'push')
     name: 'Build and tag'
     runs-on: ubuntu-latest
     permissions:
@@ -38,36 +42,6 @@ jobs:
         uses: gradle/actions/setup-gradle@v4
       - name: Build and test with Gradle
         run: ./gradlew build --stacktrace
-
-#      # SETTER DATO OG COMMIT VARIABEL
-#      - name: Set date & hash
-#        run: |
-#          export TZ=CET
-#          echo "DATE=$(date "+%Y-%m-%d--%H-%M-%S")" >> $GITHUB_ENV
-#          echo "COMMIT_HASH=$(git rev-parse HEAD)" >> $GITHUB_ENV
-#      # SETTER IMAGE VARIABEL
-#      - name: Set Image
-#        id: setimage
-#        run: |
-#          echo "IMAGE=ghcr.io/${{ github.repository }}/samordning-personoppslag:${{ env.DATE }}---${{ env.COMMIT_HASH }}" >> $GITHUB_ENV
-#          echo "IMAGE=ghcr.io/${{ github.repository }}/samordning-personoppslag:${{ env.DATE }}---${{ env.COMMIT_HASH }}" >> $GITHUB_OUTPUT
-#
-#      # LOGGIN TO GHCR
-#      - name: Login GHCR
-#        uses: docker/login-action@v3.3.0
-#        with:
-#          registry: ghcr.io
-#          username: ${{ github.repository_owner }}
-#          password: ${{ secrets.GITHUB_TOKEN }}
-#
-#      # PUBLISH DOCKER IMAGE
-#      - name: Build and push docker image
-#        uses: docker/build-push-action@v6
-#        with:
-#          context: .
-#          push: true
-#          tags: ${{ env.IMAGE }}
-
       - name: Nais docker-build
         uses: nais/docker-build-push@v0
         id: docker-push
